deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-template
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-apps-node-template
spec:
  replicas: 3
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-apps-node-template
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-apps-node-template
    spec:
      containers:
      - name: node-template
        image: thetablestop/node-template
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        volumeMounts:
        - mountPath: /mnt/nodeshared
          name: nodeshared
      volumes:
      - hostPath:
          path: /mnt/host
          type: DirectoryOrCreate
        name: nodeshared
