deploy-ingress.yml
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: node-template
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-apps-node-template
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: apps
  name: node-template
spec:
  rules:
  - host: node-template.thetablestop.com
    http:
      paths:
      - backend:
          serviceName: node-template
          servicePort: http
  tls:
  - hosts:
    - node-template.thetablestop.com
    secretName: star-thetablestop-com
