manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-template
spec:
  selector:
    matchLabels:
      app: node-template
  replicas: 1
  template:
    metadata:
      labels:
        app: node-template
    spec:
      containers:
      - name: node-template
        image: thetablestop/node-template
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: node-template-svc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: node-template.thetablestop.com
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: node-template
---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: mongo
spec:
  type: ExternalName
  externalName: cluster0-bsyck.gcp.mongodb.net
---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
spec:
  type: ExternalName
  externalName: albatross.rmq.cloudamqp.com
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-template-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - node-template.thetablestop.com
    secretName: node-template-tls
  rules:
  - host: node-template.thetablestop.com
    http:
      paths:
      - backend:
          serviceName: node-template-svc
          servicePort: 80
